--- a/static/styles/contents-dark.css
+++ b/static/styles/contents-dark.css
@@ -15,7 +15,7 @@
 .main-body-dark {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    /*grid-template-rows: repeat(3, 0.571fr);*/
+    grid-template-rows: repeat(1, 1fr);
     background-color: white;
     color: rgb(32, 32, 32);
     text-align: center;
@@ -27,10 +27,10 @@
 
 .photo-cont-dark {
     display: grid;
-    grid-column: 2/6;
+    grid-column: 3/7;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1, 1fr, 2, 0.5fr;
-    margin-inline: 3em;
+    margin-left: 3em;
 }
 
 .photo-avatar-dark {
@@ -43,6 +43,7 @@
     grid-column: 1/3;
     grid-row: 1/2;
     margin-top: 3em;
+    text-align: center;
 }
 
 .text-card-dark {
@@ -58,9 +59,75 @@
     margin-left: 0.3em;
 }
 
-.text-card-dark p{
-    margin-bottom: 1em;
+.text-card-dark p {
+    margin-bottom: 3em;
     size: 100%;
+}
+
+.text-cont-dark {
+    margin-top: 3em;
+    margin-bottom: 3em;
+    margin-inline: 1.5em;
+    grid-column: 7/11;
+}
+
+h1 {
+    font-size: 5em;
+}
+.ru-version {
+    font-size: 3em;
+    margin-top: 0.46em;
+    margin-bottom: 0.46em;
+}
+h3 {
+    font-size: 1.3em;
+}
+
+.cv-show-button-dark {
+    display: inline-block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 1em;
+    margin-right: 0.5em;
+}
+
+.cv-show-button-dark>a {
+    display: block;
+    width: 7em;
+    height: auto;
+    background-color: rgb(24 72 160);
+    text-decoration: none;
+    color: white;
+    padding-top: 0.4em;
+    padding-bottom: 0.4em;
+    border-radius: 1em;
+}
+
+.cv-show-button-dark>a:hover {
+    background-color: rgb(44, 92, 180);
+}
+
+.contact-button-dark {
+    display: inline-block;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    margin-left: 0.5em;
+    margin-right: 1em;
+}
+
+.contact-button-dark>a {
+    display: block;
+    width: 7em;
+    background-color: rgb(24 72 160);
+    text-decoration: none;
+    color: white;
+    padding-top: 0.4em;
+    padding-bottom: 0.4em;
+    border-radius: 1em;
+}
+
+.contact-button-dark>a:hover {
+    background-color: rgb(44, 92, 180);
 }
 
 @media (max-width: 1045px) {
@@ -72,10 +139,35 @@
         grid-column: 1/5;
     }
 }
+@media (max-width: 767px) {
+    .main-body-dark {
+        grid-template-rows: repeat(2, 1fr);
+    }
+    .text-cont-dark {
+        grid-row: 2/3;
+        grid-column: 1/5;
+        margin-top: 0;
+    }
+}
 @media (max-width: 500px) {
     .main-body-dark {
         margin-top: 5em;
         margin-inline: 2em;
         margin-bottom: 2em;
+    }
+    .photo-avatar-dark>img {
+        margin-top: 2em;
+    }
+    .photo-cont-dark {
+        margin-inline: 2em;
+    }
+    .text-card-dark p {
+        margin-bottom: 0.5em;
+    }
+    .ru-version {
+        font-size: 2em;
+    }
+    .ru-information {
+        font-size: 1.2em;
     }
 }
