--- a/static/styles/contents-dark.css
+++ b/static/styles/contents-dark.css
@@ -74,7 +74,7 @@
 h1 {
     font-size: 5em;
 }
-.ru-version {
+#ru-version {
     font-size: 3em;
     margin-top: 0.46em;
     margin-bottom: 0.46em;
@@ -161,13 +161,20 @@ h3 {
     .photo-cont-dark {
         margin-inline: 2em;
     }
+
+    .text-cont-dark h1 {
+        font-size: 3em;
+    }
+    .text-cont-dark h3 {
+        font-size: 1em;
+    }
     .text-card-dark p {
         margin-bottom: 0.5em;
     }
-    .ru-version {
+    #ru-version {
         font-size: 2em;
     }
-    .ru-information {
-        font-size: 1.2em;
+    #ru-information {
+        font-size: 1em;
     }
 }
