--- a/static/styles/contents-dark.css
+++ b/static/styles/contents-dark.css
@@ -12,10 +12,17 @@
       "wdth" 100;
 }
 
+/*.main-container {
+    display: block;
+    align-self: center;
+    position: static;
+    background-color: white;
+}*/
+
 .main-body-dark {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(1, 1fr);
+    grid-template-rows: /*repeat(2, 50%)*/ repeat(1, 1fr);
     background-color: white;
     color: rgb(32, 32, 32);
     text-align: center;
@@ -27,7 +34,8 @@
 
 .photo-cont-dark {
     display: grid;
-    grid-column: 3/7;
+    grid-column: 1/7;
+    grid-row: 1/2;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1, 1fr, 2, 0.5fr;
     margin-left: 3em;
@@ -35,6 +43,8 @@
 
 .photo-avatar-dark {
     display: block;
+    /*width: 100%;
+    height: 100%;*/
     grid-column: 1/3;
 }
 
@@ -67,8 +77,9 @@
 .text-cont-dark {
     margin-top: 3em;
     margin-bottom: 3em;
-    margin-inline: 1.5em;
-    grid-column: 7/11;
+    margin-right: 3em;
+    margin-left: 1.5em;
+    grid-column: 7/13;
 }
 
 h1 {
@@ -130,18 +141,31 @@ h3 {
     background-color: rgb(44, 92, 180);
 }
 
+.about-me-dark {
+    text-align: left;
+}
+
 @media (max-width: 1045px) {
     .main-body-dark {
         display: grid;
+        grid-template-columns: repeat(6, 1fr);
+    }
+    .photo-cont-dark {
+        grid-column: 1/4;
+        margin-inline: 3em;
+    }
+    .text-cont-dark {
+        grid-column: 4/7;
+        margin: 3em;
+    }
+}
+@media (max-width: 769px) {
+    .main-body-dark {
         grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(2, 1fr);
     }
     .photo-cont-dark {
         grid-column: 1/5;
-    }
-}
-@media (max-width: 767px) {
-    .main-body-dark {
-        grid-template-rows: repeat(2, 1fr);
     }
     .text-cont-dark {
         grid-row: 2/3;
@@ -151,6 +175,8 @@ h3 {
 }
 @media (max-width: 500px) {
     .main-body-dark {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(1, 0.8fr);
         margin-top: 5em;
         margin-inline: 2em;
         margin-bottom: 2em;
@@ -161,7 +187,9 @@ h3 {
     .photo-cont-dark {
         margin-inline: 2em;
     }
-
+    .text-cont-dark {
+        margin-inline: 2em
+    }
     .text-cont-dark h1 {
         font-size: 3em;
     }
@@ -176,5 +204,13 @@ h3 {
     }
     #ru-information {
         font-size: 1em;
+    }
+}
+@media (max-width: 395px) {
+    .cv-show-button-dark {
+        margin-left: 0;
+    }
+    .contact-button-dark {
+        margin-right: 0;
     }
 }
