--- a/static/styles/contents-dark.css
+++ b/static/styles/contents-dark.css
@@ -12,22 +12,28 @@
       "wdth" 100;
 }
 
-/*.main-container {
+.introducing-header-dark {
     display: block;
-    align-self: center;
-    position: static;
-    background-color: white;
-}*/
+    max-width: 70%;
+    text-align: left;
+    margin-top: 6em;
+    font-family: "Open Sans";
+    color: white;
+    margin-inline: auto;
+}
 
 .main-body-dark {
     display: grid;
+    position: static;
+    max-width: 70%;
+    border-radius: 1em;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: /*repeat(2, 50%)*/ repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
     background-color: white;
     color: rgb(32, 32, 32);
     text-align: center;
     margin-top: 6em;
-    margin-inline: 3em;
+    margin-inline: auto;
     margin-bottom: 3em;
     font-family: "Open Sans";
 }
@@ -43,8 +49,6 @@
 
 .photo-avatar-dark {
     display: block;
-    /*width: 100%;
-    height: 100%;*/
     grid-column: 1/3;
 }
 
@@ -145,10 +149,106 @@ h3 {
     text-align: left;
 }
 
+.about-me-dark p, .skills-container-dark p, .coming-soon-container p {
+    font-size: 1.4em;
+}
+
+.skills-dark, .coming-soon-dark {
+    display: block;
+    max-width: 70%;
+    text-align: left;
+    margin-top: 6em;
+    font-family: "Open Sans";
+    color: white;
+    margin-inline: auto;
+}
+
+.skills-dark h2, .coming-soon-dark h2{
+    font-size: 4em;
+}
+
+.skills-container-dark {
+    display: block;
+    max-width: 70%;
+    /*background-image: linear-gradient(to bottom right, rgb(24 72 160), rgb(32, 32, 32));*/
+    background-color: white;
+    border-radius: 1em;
+    margin-inline: auto;
+    margin-top: 6em;
+    margin-bottom: 3em;
+    padding-top: 3em;
+    padding-bottom: 2em;
+}
+
+.skills-container-dark p {
+    font-family: "Open Sans";
+    margin-inline: 3em;
+    font-weight: bold;
+}
+
+.skills-container-dark img {
+    height: 2em;
+    margin: 1em;
+}
+
+.logos-container-dark {
+    margin-left: 3em;
+    display: flex;
+    justify-content: left;
+}
+
+.coming-soon-container {
+    display: block;
+    max-width: 70%;
+    background-color: white;
+    border-radius: 1em;
+    margin-inline: auto;
+    margin-top: 6em;
+    margin-bottom: 3em;
+    padding-top: 3em;
+    padding-bottom: 3em;
+}
+
+.coming-soon-container p {
+    margin-inline: 3em;
+    margin-top: 1em;
+    text-align: center;
+    font-family: "Open Sans"
+}
+
+.follow-me-btn {
+    display: flex;
+    align-items: center;
+}
+
+.follow-me-dark {
+    display: block;
+    text-align: center;
+    margin-inline: auto;
+}
+
+.follow-me-dark a {
+    display: block;
+    text-decoration: none;
+    background-color: rgb(32, 32, 32);
+    color: white;
+    font-family: "Open Sans";
+    width: 7em;
+    margin-top: 1em;
+    padding-top: 0.4em;
+    padding-bottom: 0.4em;
+    border-radius: 1em;
+}
+
+.follow-me-dark a:hover {
+    background-color: rgb(42, 42, 42);
+}
+
 @media (max-width: 1045px) {
     .main-body-dark {
         display: grid;
         grid-template-columns: repeat(6, 1fr);
+        font-size: 0.9em;
     }
     .photo-cont-dark {
         grid-column: 1/4;
@@ -158,14 +258,24 @@ h3 {
         grid-column: 4/7;
         margin: 3em;
     }
+    .about-me-dark p {
+        font-size: 0.9em;
+    }
 }
 @media (max-width: 769px) {
+    .introducing-header-dark {
+        max-width: 89%;
+    }
     .main-body-dark {
+        max-width: 89%;
         grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(2, 1fr);
+        /*grid-template-rows: repeat(2, 1fr);*/
     }
     .photo-cont-dark {
         grid-column: 1/5;
+    }
+    .text-card-dark>p {
+        margin-bottom: 0;
     }
     .text-cont-dark {
         grid-row: 2/3;
@@ -174,6 +284,9 @@ h3 {
     }
 }
 @media (max-width: 500px) {
+    .introducing-header-dark {
+        max-width: 90%;
+    }
     .main-body-dark {
         grid-template-columns: repeat(4, 1fr);
         grid-template-rows: repeat(1, 0.8fr);
