--- a/static/styles/contents-dark.css
+++ b/static/styles/contents-dark.css
@@ -49,6 +49,8 @@
 
 .photo-avatar-dark {
     display: block;
+    /*width: 100%;
+    height: 100%;*/
     grid-column: 1/3;
 }
 
@@ -149,99 +151,8 @@ h3 {
     text-align: left;
 }
 
-.about-me-dark p, .skills-container-dark p, .coming-soon-container p {
+.about-me-dark p {
     font-size: 1.4em;
-}
-
-.skills-dark, .coming-soon-dark {
-    display: block;
-    max-width: 70%;
-    text-align: left;
-    margin-top: 6em;
-    font-family: "Open Sans";
-    color: white;
-    margin-inline: auto;
-}
-
-.skills-dark h2, .coming-soon-dark h2{
-    font-size: 4em;
-}
-
-.skills-container-dark {
-    display: block;
-    max-width: 70%;
-    /*background-image: linear-gradient(to bottom right, rgb(24 72 160), rgb(32, 32, 32));*/
-    background-color: white;
-    border-radius: 1em;
-    margin-inline: auto;
-    margin-top: 6em;
-    margin-bottom: 3em;
-    padding-top: 3em;
-    padding-bottom: 2em;
-}
-
-.skills-container-dark p {
-    font-family: "Open Sans";
-    margin-inline: 3em;
-    font-weight: bold;
-}
-
-.skills-container-dark img {
-    height: 2em;
-    margin: 1em;
-}
-
-.logos-container-dark {
-    margin-left: 3em;
-    display: flex;
-    justify-content: left;
-}
-
-.coming-soon-container {
-    display: block;
-    max-width: 70%;
-    background-color: white;
-    border-radius: 1em;
-    margin-inline: auto;
-    margin-top: 6em;
-    margin-bottom: 3em;
-    padding-top: 3em;
-    padding-bottom: 3em;
-}
-
-.coming-soon-container p {
-    margin-inline: 3em;
-    margin-top: 1em;
-    text-align: center;
-    font-family: "Open Sans"
-}
-
-.follow-me-btn {
-    display: flex;
-    align-items: center;
-}
-
-.follow-me-dark {
-    display: block;
-    text-align: center;
-    margin-inline: auto;
-}
-
-.follow-me-dark a {
-    display: block;
-    text-decoration: none;
-    background-color: rgb(32, 32, 32);
-    color: white;
-    font-family: "Open Sans";
-    width: 7em;
-    margin-top: 1em;
-    padding-top: 0.4em;
-    padding-bottom: 0.4em;
-    border-radius: 1em;
-}
-
-.follow-me-dark a:hover {
-    background-color: rgb(42, 42, 42);
 }
 
 @media (max-width: 1045px) {
