--- a/static/styles/footer-dark.css
+++ b/static/styles/footer-dark.css
@@ -3,10 +3,6 @@
     bottom: 0;
 }
 
-/*p {
-    ;
-}*/
-
 .footer-dark {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
@@ -24,74 +20,8 @@
     grid-column: 3/7;
 }
 
-.footer-right-side {
-    grid-column: 7/8;
-}
-
-.name-footer-dark {
-    margin-top: 1em;
-    margin-bottom: 2em;
-}
-
-.name-footer-dark p, .text-left-footer p {
-    padding: 0.8em;
-    font-family: "Open Sans"
-}
-
-.contact-icons-footer { 
-    display: flex;
-    flex-direction: row;
-}
-
-.contact-icons-footer img {
-    display: block;
-    height: 2em;
-    margin-left: 1em;
-}
-
-.copyright {
-    font-size: 0.7em;
-    opacity: 0.5;
-    margin-left: 0.3em;
-}
-
-.info-footer-right {
-    display: block;
-    grid-column: 7/8;
-    margin-top: 1em;
-}
-
-.info-footer-right>p, .cookies-info>p {
-    margin-top: 1em;
-    margin-bottom: 2.8em;
-    padding: 0.8em;
-    opacity: 0.5;
-}
-
-.info-footer-right ul, .cookies-info ul {
-    margin-left: 0.8em;
-}
-
-.info-footer-right li, .cookies-info li {
+.name-footer-dark>ul>li {
     font-family: "Open Sans";
     list-style: none;
-    padding-top: 0.2em;
-    padding-bottom: 0.2em;
-}
-
-.info-footer-right a:hover {
-    color: rgb(24 72 160);
-}
-
-.cookies-info a:hover {
-    color: rgb(24 72 160);
-}
-
-.info-footer-right a, .cookies-info a {
-    text-decoration: none;
-    color: white;
-}
-
-.cookies-info {
-    grid-column: 9/10;
+    padding: 0.8em;
 }
