--- a/static/styles/contents-dark.css
+++ b/static/styles/contents-dark.css
@@ -49,8 +49,6 @@
 
 .photo-avatar-dark {
     display: block;
-    /*width: 100%;
-    height: 100%;*/
     grid-column: 1/3;
 }
 
@@ -151,8 +149,106 @@ h3 {
     text-align: left;
 }
 
-.about-me-dark p {
+.about-me-dark p, .skills-container-dark p, .coming-soon-container p {
     font-size: 1.4em;
+}
+
+.skills-dark, .coming-soon-dark {
+    display: block;
+    max-width: 70%;
+    text-align: left;
+    margin-top: 6em;
+    font-family: "Open Sans";
+    color: white;
+    margin-inline: auto;
+}
+
+.skills-dark h2, .coming-soon-dark h2{
+    font-size: 4em;
+}
+
+.skills-container-dark {
+    display: block;
+    max-width: 70%;
+    background-image: radial-gradient(circle at 17% 12%, rgb(24 72 160), rgb(40 33 37), rgb(34 32 33), rgb(40 33 37));
+    border-radius: 1em;
+    animation-duration: 10s;
+    margin-inline: auto;
+    margin-top: 6em;
+    margin-bottom: 3em;
+    padding-top: 3em;
+    padding-bottom: 2em;
+}
+
+#github-streak-stats {
+    display: block;
+}
+
+.skills-container-dark p {
+    opacity: 1;
+    font-family: "Open Sans";
+    margin-inline: 3em;
+    color: white;
+    font-weight: bold;
+}
+
+.skills-container-dark img {
+    height: 2em;
+    margin: 1em;
+}
+
+.logos-container-dark {
+    margin-left: 3em;
+    display: flex;
+    justify-content: left;
+}
+
+.coming-soon-container {
+    display: block;
+    max-width: 70%;
+    background-image: radial-gradient(circle at 50% 68%, rgb(24 72 160), rgb(40 33 37), rgb(34 32 33));
+    color: white;
+    border-radius: 1em;
+    margin-inline: auto;
+    margin-top: 6em;
+    margin-bottom: 3em;
+    padding-top: 3em;
+    padding-bottom: 3em;
+}
+
+.coming-soon-container p {
+    margin-inline: 3em;
+    margin-top: 1em;
+    text-align: center;
+    font-family: "Open Sans"
+}
+
+.follow-me-btn {
+    display: flex;
+    align-items: center;
+}
+
+.follow-me-dark {
+    display: block;
+    text-align: center;
+    margin-inline: auto;
+}
+
+.follow-me-dark a {
+    display: block;
+    text-decoration: none;
+    background-color: rgb(32, 32, 32);
+    color: white;
+    font-family: "Open Sans";
+    width: 7em;
+    margin-top: 1em;
+    padding-top: 0.4em;
+    padding-bottom: 0.4em;
+    border-radius: 1em;
+}
+
+.follow-me-dark a:hover {
+    background-color: rgb(24 72 160);
 }
 
 @media (max-width: 1045px) {
@@ -169,18 +265,20 @@ h3 {
         grid-column: 4/7;
         margin: 3em;
     }
-    .about-me-dark p {
-        font-size: 0.9em;
+    .about-me-dark p, .skills-container-dark p, .coming-soon-container p {
+        font-size: 1.2em;
     }
 }
 @media (max-width: 769px) {
-    .introducing-header-dark {
+    .introducing-header-dark, .skills-dark, .coming-soon-dark {
         max-width: 89%;
+    }
+    .introducing-header-dark h1 {
+        font-size: 4.5em;
     }
     .main-body-dark {
         max-width: 89%;
         grid-template-columns: repeat(4, 1fr);
-        /*grid-template-rows: repeat(2, 1fr);*/
     }
     .photo-cont-dark {
         grid-column: 1/5;
@@ -193,9 +291,22 @@ h3 {
         grid-column: 1/5;
         margin-top: 0;
     }
+    .skills-container-dark, .coming-soon-container {
+        max-width: 89%;
+        font-size: 0.9em;
+    }
+    .skills-dark h2, .coming-soon-dark h2 {
+        font-size: 3.5em;
+    }
+    .skills-container-dark {
+        background-image: radial-gradient(circle at 17% 12%, rgb(24 72 160), rgb(40 33 37), rgb(34 32 33));
+    }
+    .coming-soon-container {
+        background-image: radial-gradient(circle at 50% 80%, rgb(24 72 160), rgb(40 33 37), rgb(34 32 33));
+    }
 }
 @media (max-width: 500px) {
-    .introducing-header-dark {
+    .introducing-header-dark, .skills-dark, .coming-soon-dark {
         max-width: 90%;
     }
     .main-body-dark {
@@ -204,6 +315,14 @@ h3 {
         margin-top: 5em;
         margin-inline: 2em;
         margin-bottom: 2em;
+    }
+    .skills-container-dark, .coming-soon-container {
+        margin-top: 5em;
+        margin-inline: 2em;
+        margin-bottom: 2em;
+    }
+    .skills-container-dark p {
+        margin-inline: 2em;
     }
     .photo-avatar-dark>img {
         margin-top: 2em;
@@ -228,6 +347,22 @@ h3 {
     }
     #ru-information {
         font-size: 1em;
+    }
+    .skills-container-dark {
+        padding-top: 2em;
+    }
+    .coming-soon-container {
+        padding-top: 2em;
+        padding-bottom: 2em;
+    }
+    .logos-container-dark {
+        margin-left: 1.2em;
+    }
+    .skills-container-dark {
+        background-image: radial-gradient(circle at 17% 12%, rgb(24 72 160), rgb(40 33 37), rgb(34 32 33));
+    }
+    .coming-soon-container {
+        background-image: radial-gradient(circle at 50% 80%, rgb(24 72 160), rgb(40 33 37), rgb(34 32 33));
     }
 }
 @media (max-width: 395px) {
