--- a/static/styles/contents-dark.css
+++ b/static/styles/contents-dark.css
@@ -265,6 +265,9 @@ h3 {
         grid-column: 4/7;
         margin: 3em;
     }
+    #ru-version {
+        font-size: 2.5em;
+    }
     .about-me-dark p, .skills-container-dark p, .coming-soon-container p {
         font-size: 1.2em;
     }
@@ -315,6 +318,9 @@ h3 {
         margin-top: 5em;
         margin-inline: 2em;
         margin-bottom: 2em;
+    }
+    #ru-h1 {
+        font-size: 2.8em;
     }
     .skills-container-dark, .coming-soon-container {
         margin-top: 5em;
