--- a/src/style/main_src.css
+++ b/src/style/main_src.css
@@ -3,12 +3,42 @@
 @tailwind utilities;
 
 body {
-    background: fixed;
-    background-image: url("../images/bckgrnd-2.png");
-    background-size: cover;
+    background-image: radial-gradient(circle, #5de0e6, #004aad);
+    background-attachment: fixed;
 }
+
+.roboto {
+    font-family: "Roboto", serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+  }
+.prevent-select {
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+  }
 
 .icon {
     display: inline-block;
     margin: 2em;
+}
+
+.icon:hover {
+    background-color: #004d87;
+    opacity: 0.5;
+}
+.position {
+    top: 30%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+    left: 50%;
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+
+.logo-size {
+    width: 35em;
 }
