--- a/src/style/main_src.css
+++ b/src/style/main_src.css
@@ -32,13 +32,15 @@ body {
     opacity: 0.5;
 }
 .position {
-    top: 30%;
+    margin-top: 20rem;
+    /* bottom: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
     left: 50%;
     -ms-transform: translateX(-50%);
-    transform: translateX(-50%);
+    transform: translateX(-50%); */
 }
+
 
 .logo-size {
     width: 35em;
