--- a/src/style/main.css
+++ b/src/style/main.css
@@ -614,6 +614,10 @@ video {
   z-index: 30;
 }
 
+.z-50 {
+  z-index: 50;
+}
+
 .col-span-2 {
   grid-column: span 2 / span 2;
 }
@@ -857,13 +861,19 @@ video {
 
 /*Some configs*/
 
-body {
+html {
   background-image: radial-gradient(circle, #5de0e6, #004aad);
   background-attachment: fixed;
+  cursor: none;
+}
+
+.cursor-custom {
+  width: 2em;
+  height: 2em;
 }
 
 .roboto {
-  font-family: "Roboto", serif;
+  font-family: "Roboto",  serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
@@ -885,13 +895,14 @@ body {
   margin: 2em;
 }
 
-.icon:hover {
-  background-color: #004d87;
-  opacity: 0.5;
-}
+/* .icon:hover {
+    background-color: #004d87;
+    opacity: 0.5;
+} */
 
 .position {
-  margin-top: 20rem;
+  margin-top: 20vh;
+  margin-bottom: auto;
   /* bottom: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
