--- a/src/style/main_src.css
+++ b/src/style/main_src.css
@@ -3,13 +3,18 @@
 @tailwind utilities;
 
 /*Some configs*/
-body {
+html {
     background-image: radial-gradient(circle, #5de0e6, #004aad);
     background-attachment: fixed;
+    cursor: none;
 }
 
+.cursor-custom {
+    width: 2em;
+    height: 2em;
+}
 .roboto {
-    font-family: "Roboto", serif;
+    font-family: "Roboto",  serif;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
@@ -27,12 +32,13 @@ body {
     margin: 2em;
 }
 
-.icon:hover {
+/* .icon:hover {
     background-color: #004d87;
     opacity: 0.5;
-}
+} */
 .position {
-    margin-top: 20rem;
+    margin-top: 20vh;
+    margin-bottom: auto;
     /* bottom: 50%;
     -ms-transform: translateY(-50%);
     transform: translateY(-50%);
